# voice-recognition

./: .buildinfo  .gitignore  README.md  answers.txt  api_reference.html  genindex.html  how_to_start.html  how_to_use_hf_models_with_ollama.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  settings.html  setup.html  test.html  whisper.html
.github/workflows/: deploy-doc.yml
_modules/: index.html
_modules/src/: main.html  manager.html
_sources/: how_to_start.md  how_to_use_hf_models_with_ollama.md  intro.md  setup.md  test.md
cache/: rag_metadata.json
docs/: _config.yml  _toc.yml  api_reference.rst  conf.py  how_to_start.md  intro.md  settings.md  setup.md  whisper.md
docs/_build/.doctrees/: environment.pickle  how_to_start.doctree  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree  setup.doctree  test.doctree
docs/_build/html/: .buildinfo  genindex.html  how_to_start.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  search.html  searchindex.js  setup.html  test.html
docs/_build/html/_sources/: setup.md  (+1 more)
docs/_build/jupyter_execute/: markdown-notebooks.ipynb
docs/_static/: custom.css
forum_cache/: rag_metadata.json
forum_knowledge_base/: users.json  users.txt
knowledge_base/: decorator3.txt  decorator4.txt  decorators.txt  decorators2.txt
src/: add_context.py  ai_manager.py  forum_manager.py  hf_manager.py  main.py  manager.py  rag_langchain.py  sd_manager.py  simple_rag_manager.py  utils.py
