[tool.poetry]
name = "audio-capture"
version = "0.1.0"
description = "Desktop applications"
authors = ["Viachaslau_Kazakou <sly.kazakoff@gmail.com>"]
packages = [{include = "src"}]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyinstaller = "^6.12.0"
pytest = "^8.3.4"
black = "^25.1.0"
flake8 = "^7.1.2"
flake8-pyproject = "^1.2.3"
isort = "^6.0.1"
pyqt6 = "^6.8.1"
sounddevice = "^0.5.1"
numpy = ">=1.20.0,<2.0.0"
torch = "2.2.2"
transformers = "^4.50.3"
accelerate = "^1.6.0"
openai-whisper = "20240930"
ollama = "^0.4.7"
pygments = "^2.19.1"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.flake8]
max-line-length = 120
extend-ignore = "E203, W503"

[tool.isort]
profile = "black"

